--- a/index.html
+++ b/index.html
@@ -51,6 +51,6 @@
                 </aside>
             </div>
         </div>
-        <!--<script type="text/javascript" src="mini.js"></script>-->
+        <script type="text/javascript" src="mini.js"></script>
     </body>
 </html>
