adjust content padding

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             figure {display: inline-block;}
             .highlight {color: blue;}
             .error {color: red;}
-            #demo {border: 1px solid gray; min-height: 200px; min-width: 400px; margin-top: 20px;}
+            #demo {border: 1px solid gray; min-height: 200px; min-width: 400px; margin-top: 20px; padding: 25px;}
             #main-content > a {background-color: aliceblue; border: solid 1px lightblue; border-radius: 8px; padding:6px; margin: 10px;}
         </style>
         <title>Framework-free-single-page-app by coderLMN</title>
