--- a/total.html
+++ b/total.html
@@ -1,5 +1,5 @@
 <br>
-<h1> Original JSON Data</h1>
+<h1> Original JSON Data Count</h1>
 <br>
-<p> This is the original JSON data returned from server: </p>
+<p> The total number of key-value pairs of original JSON data returned from server is: </p>
 <p>{{emojis.length}}</p>
