--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <style>
             figure {display: inline-block;}
             .highlight {color: blue;}
-            h1#404 {color: red;}
+            #error404 {color: red;}
             #demo {border: 1px solid gray; min-height: 200px; min-width: 400px; margin-top: 20px; padding: 50px;}
             #main-content > a {background-color: aliceblue; border: solid 1px lightblue; border-radius: 8px; padding:6px; margin: 10px;}
         </style>
