try github MD api

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="inner clearfix">
                 <section id="main-content">
                     <h1> Demo Contents:</h1>
-                    <a href="#total">Total</a>
+                    <a href="#total">MD</a>
                     <a href="#keys">Keys</a>
                     <a href="#full">Full</a>
                     <a href="#wrong">notExist</a>
