POST issue fixed

--- a/total.html
+++ b/total.html
@@ -1,10 +1,12 @@
 <br>
 <h1> POST MD text to Github and get rendered HTML</h1>
 <br>
-<p> write your markdown text: </p>
+<p> write your markdown text (for example: Hello world github/linguist#1 **cool**, and #1!): </p>
 <form name="md">
     <textarea id="mdText"></textarea>
     <button data-action="submit">submit</button>
 </form>
+<hr>
+<h3>Rendered elements from Github API:</h3>
 <div id="render">
 </div>
