--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             .highlight {color: blue;}
             #demo {border: 1px solid gray; min-height: 200px; min-width: 400px; margin-top: 20px; padding: 50px;}
             #main-content > a {background-color: aliceblue; border: solid 1px lightblue; border-radius: 8px; padding:6px; margin: 10px;}
+            #render {background-color: pink; padding-left: 10px;}
         </style>
         <title>Framework-free-single-page-app by coderLMN</title>
     </head>
