--- a/home.html
+++ b/home.html
@@ -1,4 +1,4 @@
 <div>
-    <h1>This is the default page.</h1>
-    <p>Please click one link above to load a partial page.</p>
+    <h1>This is the default home page.</h1>
+    <p>Please click one link above to load another partial page.</p>
 </div>
