bigger than bigger

--- a/postMD.html
+++ b/postMD.html
@@ -3,7 +3,7 @@
 <br>
 <p> write your markdown text (for example:  <strong>Hello world github/linguist#1 **cool**, and #1! </strong>): </p>
 
-<textarea id="mdText" value="Hello world github/linguist#1 **cool**, and #1!"></textarea>
+<textarea id="mdText" cols="80" rows="20"></textarea>
 <button data-action="submit">submit</button>
 
 <hr>
