--- a/postMD.html
+++ b/postMD.html
@@ -1,13 +1,13 @@
 <br>
 <h1> POST request: send MD text to Github and get rendered HTML</h1>
 <br>
-<p> write your markdown text (for example:  <strong>Hello world github/linguist#1 **cool**, and #1! </strong>): </p>
+<p> markdown text here (for example:  <strong>Hello world github/linguist#1 **cool**, and #1! </strong>): </p>
 
-<textarea id="mdText" cols="80" rows="20"></textarea>
+<textarea id="mdText" cols="80" rows="10"></textarea>
 <button data-action="submit">submit</button>
 
 <hr>
-<h3>Rendered elements from Github API (https://api.github.com/markdown):</h3>
+<h4>Rendered elements from Github API (https://api.github.com/markdown):</h4>
 <i id="spinner" class="csspinner duo"></i>
 <div id="md">
 </div>
