--- a/postMD.html
+++ b/postMD.html
@@ -1,11 +1,7 @@
-<br>
-<h2> POST request: send MD text to Github and get rendered HTML</h2>
-<br>
+<h2> POST request: send MD text and get rendered HTML</h2>
 <p> markdown text here (for example:  <strong>Hello world github/linguist#1 **cool**, and #1! </strong>): </p>
-
-<textarea id="mdText" cols="80" rows="10"></textarea>
+<textarea id="mdText" cols="80" rows="6"></textarea>
 <button data-action="submit">submit</button>
-
 <hr>
 <h4>Rendered elements from Github API (https://api.github.com/markdown):</h4>
 <i id="spinner" class="csspinner duo"></i>
