--- a/getEmoji.html
+++ b/getEmoji.html
@@ -7,7 +7,7 @@
     <ul>
         <li data-repeat="emojis" data-item="data">
             <figure>
-                <img data-src='{{data.value}}' width='100' height='100'>
+                <img src='{{data.value}}' width='100' height='100'>
                 <figcaption>{{data.key}}</figcaption>
             </figure>
         </li>
