--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
                 </aside>
             </div>
         </div>
+		<audio autoplay="" loop="">
+			<source src="HKTK.mp3" type="audio/mp3">
+		</audio>
         <script type="text/javascript" src="lib/miniSPA.js"></script>
         <script type="text/javascript" src="app.js"></script>
     </body>
