--- a/getEmoji.html
+++ b/getEmoji.html
@@ -7,7 +7,7 @@
     <ul>
         <li data-repeat="emojis" data-item="data" class="inline">
             <figure>
-                <img data-src='{{data.value}}' width='80' height='80'>
+                <img data-src='{{data.value}}' width='80' height='80' onclick="getEmoji.clicked('{{data.key}}');">
                 <figcaption>{{data.key}}</figcaption>
             </figure>
         </li>
